--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/airplane.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>PLAN-IT</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Single+Day&display=swap');  
+
+  </style>
